# ai-content-multiplatform

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: release.yml  test.yml
docs/: 01-business-requirements.md  02-technical-design.md  03-self-review.md
examples/: output_wechat.md  output_xiaohongshu.md  sample.md
promotion/: juejin-article.md  promotion-kit.md
src/ai_content_multiplatform/: __init__.py
src/ai_content_multiplatform/cli/: __init__.py  adapt.py  config.py  main.py  preview.py  publish.py
src/ai_content_multiplatform/config/: rules.yaml  settings.py
src/ai_content_multiplatform/core/: __init__.py  adapter.py  exceptions.py  history.py  llm.py  models.py  parser.py  publisher.py
src/ai_content_multiplatform/utils/: formatter.py  logger.py
tests/: conftest.py  test_adapter.py  test_cli.py  test_config.py  test_formatter.py  test_history.py  test_llm.py  test_parser.py  test_platforms.py  test_publisher.py
